Many tests migrated to junit but a log missing